--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Only js-arrays-2</title>
 </head>
 <body>
-    <script src="./vazifa-1.js"></script>
+    <!-- <script src="./vazifa-1.js"></script> -->
+    <script src="./vazifa-2.js"></script>
 </body>
 </html>
